# fastapi-ws

./: .gitignore  README.md  main.py  pyproject.toml
app/: controller.py  manager.py  ws_route.py
loggers/: logger.py
tests/: conftest.py  test_app.py
