[tool.poetry]
name = "fastapi-ws"
version = "0.1.0"
description = ""
authors = ["Yevhen Syzintsev <yevhen_s@dataforest.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
websockets = "^15.0.1"
httpx = "^0.28.1"
pytest-order = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
